# effiQueue

./: Cargo.toml
data/: config.conf
src/: config_reader.rs  main.rs  process.rs  rabbitmq_connector.rs  system_info.rs
