[package]
name = "effiQueue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.12"
tokio = { version = "1", features = ["full"] }
amiquip = "0.4.2"
lapin = {version = "2.3.1"}
sysinfo = "*"
